Modified the resume

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html>
 	<head>
 		<link href="style.css" rel="stylesheet">
-		<title>Mani Ganeshwari resume </title>
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+		<title>Mani Ganeshwari resume</title>
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 	</head>
 
 	<body>
@@ -10,44 +10,57 @@
 			<!-- resume header with your name and title -->
 			<h1>MANI GANESHWARI DONGA</h1>
 			<hr>
-			CSE(AI&ML)-UNDERGRAD'26
+			 ENGINEERING STUDENT,Cse(Ai&Ml) UnderGrad'26
 			<hr>
 		</header>
 		<main>
 			<article id="mainLeft">
 				<section>
-					<h2>CONTACT</h2>
+					<h2 >CONTACT</h2>
 					<!-- contact info including social media -->
-                    <p>
-                        <i class="fab fa-linkedin" aria-hidden="true"></i>
-                        <a href="www.linkedin.com/in/maniganeshwari-donga-486b14301">linkedin-username</a>
-                    </p>
+					<p>
+						<i class="fab fa-github" aria-hidden="true"></i>
+						<a href="https://github.com/ManiGaneshwari">github</a>
+					</p>
+					<p>
+						<i class="fab fa-linkedin" aria-hidden="true"></i>
+						<a href="www.linkedin.com/in/maniganeshwari-donga-486b14301">linkedin</a>
+					</p>
 				</section>
 				<section>
 					<h2>SKILLS</h2>
 					<!-- your skills -->
-                    <p>Python ,Data Structure and Algorithms using python , Java and C (Basic),</p>
-                    <p>Front-end development (complete HTML,CSS and basic knowledge on JS)</p>
+					<p>Technical Skills :</p>
+					<ul>
+						<li>Python ,Data Structure and Algorithms using python , Java and C (Basic)</li>
+						<li>Front-end development (complete HTML,CSS and basic knowledge on JS)</li>
+					</ul>
+					<p>Soft Skills :</p>
+					<ul>
+						<li> Leadership skills, Team and Time management skill, Organization skill and Creative thinking
+						</li>
+					</ul>
 				</section>
 				<section>
 					<h2>EDUCATION</h2>
 					<!-- your education -->
-                    <h3>CSE(AI&ML)</h3>
-                    <p>
-                        Institute of Aeronautical Engineering
-                    </p>
-                    <p>
-                        2022-2026
-                    </p>
+					<h3>Computer Science and Engineering (AI&ML)</h3>
+					<p>
+						Institute of Aeronautical Engineering
+					</p>
+					<p>
+						2022-2026
+					</p>
 				</section>            
 			</article>
+			<article id="mainRight">
 				<section>
 					<h2>ABOUT</h2>
 					<!-- about you -->
-                    <p>A goal-oriented individual driven by a passion for success and continuous growth, I excel in learning new technologies
-                        and staying updated with trends. Currently focused on AI, Machine Learning, and Web Development.
-                        </p>
+					 <p>A goal-oriented individual driven by a passion for success and continuous growth, I excel in learning new technologies
+						and staying updated with trends. Currently focused on AI, Machine Learning, and Web Development</p>
 				</section>
+				
 			</article>
 		</main>
 	</body>
