--- a/index.html
+++ b/index.html
@@ -30,12 +30,8 @@
 				<section>
 					<h2>SKILLS</h2>
 					<!-- your skills -->
-					<p>Technical Skills :</p>
-					<ul>
-						<li>Python ,Data Structure and Algorithms using python , Java and C (Basic)</li>
-						<li>Front-end development (complete HTML,CSS and basic knowledge on JS)</li>
-					</ul>
-					
+					<p>Python ,Data Structure and Algorithms using python , Java and C (Basic)</p>
+					<p>Front-end development (complete HTML,CSS and basic knowledge on JS)</p>
 				</section>
 				<section>
 					<h2>EDUCATION</h2>
