--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 			<!-- resume header with your name and title -->
 			<h1>MANI GANESHWARI DONGA</h1>
 			<hr>
-			 ENGINEERING STUDENT,Cse(Ai&Ml) UnderGrad'26
+			 ENGINEERING STUDENT,CSE(AI&ML) UnderGrad'26
 			<hr>
 		</header>
 		<main>
@@ -30,9 +30,18 @@
 				<section>
 					<h2>SKILLS</h2>
 					<!-- your skills -->
-					<p>Python ,Data Structure and Algorithms using python , Java and C (Basic)</p>
-					<p>Front-end development (complete HTML,CSS and basic knowledge on JS)</p>
-				</section>
+					<p>Technical Skills :</p>
+					<ul>
+						<li>Python ,Data Structure and Algorithms using python , Java and C (Basic)</li>
+						<li>Front-end development (complete HTML,CSS and basic knowledge on JS)</li>
+					</ul>
+					<p>Soft Skills :</p>
+					<ul>
+						<li>Leadership skills, Team and Time management skill, Organization skill and Creative thinking</li>
+					</ul>
+				</section>       
+			</article>
+			<article id="mainRight">
 				<section>
 					<h2>EDUCATION</h2>
 					<!-- your education -->
@@ -43,9 +52,7 @@
 					<p>
 						2022-2026
 					</p>
-				</section>            
-			</article>
-			<article id="mainRight">
+				</section>     
 				<section>
 					<h2>ABOUT</h2>
 					<!-- about you -->
